fix: improve contrast and impact of active-page class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,8 @@
 /* Highlight current page in the navigation bar */
 .active-page {
     text-decoration: underline;
-    color: #fafafa;
+    font-size: 12pt !important;
+    font-weight: 600 !important;
 }
 
 .page-title {
@@ -171,7 +172,7 @@ main, footer {
 /* Hover.css: animation colours */
 .hvr-shutter-in-vertical:hover {
     background-color: rgba(0,0,0,0);
-    color: black;
+    color: #000;
 }
 
 /* Hover.css: un-shuttering colour */
